kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      platform: api
  template:
    metadata:
      labels:
        platform: api
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: api-env-vars
          image: placeholder/api
          name: api
          ports:
            - containerPort: 8911
      imagePullSecrets:
        - name: my-container-registry-secret
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 2
  selector:
    matchLabels:
      platform: web
  template:
    metadata:
      labels:
        platform: web
    spec:
      containers:
      - envFrom:
          - configMapRef:
            name: web-env-vars
        image: placeholder/web
        name: web
        ports:
          - containerPort: 8910
      imagePullSecrets:
        - name: my-container-registry-secret
